--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
                             <img id="memberProfileIcon" src="images/placeholder.png" alt="Member Icon" class="profile-icon">
                         </div>
                         <button class="action-icon-button like-button" id="likeButton" title="シコい!!">
-                            <span class="icon-display">❤️</span> <!-- ハートアイコンなどに変更も可 -->
+                            <span class="icon-display">❤️</span>
                         </button>
                         <button class="action-icon-button weak-point-button" id="weakPointButton" title="弱点/お気に入り">
-                            <span class="icon-display">⭐</span> <!-- 星アイコンなどに変更も可 -->
+                            <span class="icon-display">⭐</span>
                         </button>
                          <div class="fever-gauge-container-vertical">
                             <div class="fever-gauge-bar-vertical" id="feverGaugeBarVertical"></div>
@@ -38,7 +38,7 @@
                     <button class="settings-button-右上" id="openSettingsModal">⚙️</button>
                 </div>
 
-                <div class="serif-animation-container"> <!-- セリフと（旧）アニメーションエリア -->
+                <div class="serif-animation-container">
                     <div class="serif-area">
                         <div class="image-tags-container" id="imageTagsContainer" style="display: none;"></div>
                         <p id="memberQuote" class="member-quote">ここにセリフが表示されます</p>
@@ -46,10 +46,10 @@
                      <!-- アニメーションエリアは廃止 -->
                 </div>
 
-                <div class="shikoshiko-box2-controls-only"> <!-- 操作ボタン専用エリア -->
+                <div class="shikoshiko-box2-controls-only">
                     <div class="main-controls" id="shikoshikoControlsArea">
                         <button id="nopeButton" class="control-button swipe-button nope-button">萎え</button>
-                        <button id="superLikeButton" class="control-button swipe-button super-like-button" style="display:none;">SUPER</button> <!-- SUPER LIKEは将来用 -->
+                        <button id="superLikeButton" class="control-button swipe-button super-like-button" style="display:none;">SUPER</button>
                         <button id="likeButtonMain" class="control-button swipe-button like-button">シコい!!</button>
                     </div>
                 </div>
@@ -70,8 +70,7 @@
                     <div class="slider-container member-sliders" id="modalMemberSliders"><p>読み込み中...</p></div>
                     <p class="selection-note">数値が高いほど出やすくなります (0は出ません)</p>
                 </div>
-                <!-- BPM設定は廃止 -->
-                <!-- 再生オプションも一旦シンプル化のため廃止（自動スキップなし、弱点フィルタなしが前提） -->
+                <!-- BPM設定と再生オプションは廃止 -->
             </div>
             <div class="modal-footer">
                 <button id="saveSettingsButton" class="action-button primary">設定を保存</button>
@@ -81,10 +80,14 @@
 
     <!-- グローバルな下部タブナビゲーションは廃止（シングルモードのため） -->
 
+    <!-- JavaScriptファイル読み込み (順番重要!) -->
     <script src="config.js"></script>
-    <!-- utils.js は app.js に統合されるイメージ -->
+    <!-- ユーティリティ関数群 (app.jsに統合されたため、個別のutils.jsは不要) -->
+    <!-- データ処理 -->
     <script src="data_handler.js"></script>
+    <!-- UIとインタラクション -->
     <script src="card_ui.js"></script>
-    <script src="app.js"></script> <!-- 最後にapp.jsを読み込む -->
+    <!-- アプリケーションメイン (最後に読み込む) -->
+    <script src="app.js"></script>
 </body>
 </html>
